--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,9 @@ dependencies {
 
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	//validation 관련 기능
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 sourceSets {
@@ -78,3 +81,4 @@ compileQuerydsl {
 configurations {
 	querydsl.extendsFrom compileClasspath
 }
+
