--- a/build.gradle
+++ b/build.gradle
@@ -40,8 +40,10 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 
 	// API 문서화
+/*
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
 	implementation 'org.springdoc:springdoc-openapi-data-rest:1.6.9'
+*/
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
@@ -50,6 +52,11 @@ dependencies {
 
 	//validation 관련 기능
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	//swagger
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+
+
+
 }
 
 sourceSets {
