--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,27 @@ spring:
         hbm2ddl:
           auto: update
         default_batch_fetch_size: 1000
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            client-authentication-method: client_secret_post
+            client-id: 9302c10fd7fd5d2f69d2c62b763702fb
+            client-secret: qinKnzTspnRAlKuBma7EKeyovF15Xmq5
+            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
+            authorization-grant-type: authorization_code
+            scope: profile_nickname
+            client-name: Kakao
+          google:
+            client-id: 13170804203-328v7qaudvp4epvuslqfvl4hjbgv6h9q.apps.googleusercontent.com
+            client-secret: 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
+            scope:
+              - email
+              - profile
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
