--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,12 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.3.4'
-	id 'io.spring.dependency-management' version '1.1.6'
-	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
+	id 'org.springframework.boot' version '3.0.0'
+	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
 group = 'com.example'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0'
 sourceCompatibility = '17'
-
-java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(17)
-	}
-}
 
 configurations {
 	compileOnly {
@@ -26,6 +19,7 @@ repositories {
 }
 
 dependencies {
+	// ... 기존 의존성 유지 ...
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'mysql:mysql-connector-java:8.0.33'  // MySQL 드라이버 추가
@@ -41,8 +35,8 @@ dependencies {
 
 	// API 문서화
 /*
-	implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
-	implementation 'org.springdoc:springdoc-openapi-data-rest:1.6.9'
+   implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
+   implementation 'org.springdoc:springdoc-openapi-data-rest:1.6.9'
 */
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -65,35 +59,23 @@ dependencies {
 
 	// Spring Security OAuth2 클라이언트 의존성 추가
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
 }
 
-sourceSets {
-	main {
-		java {
-			srcDirs = ['src/main/java', 'src/main/resources']
-		}
-	}
-}
 tasks.named('test') {
 	useJUnitPlatform()
 }
 
-// QueryDSL 설정부
-def generated = 'src/main/generated'
+def querydslDir = "src/main/generated"
 
-querydsl {
-	jpa = true
-	querydslSourcesDir = generated
-}
 sourceSets {
-	main.java.srcDir generated
+	main.java.srcDirs += [ querydslDir ]
 }
 
-compileQuerydsl {
-	options.annotationProcessorPath = configurations.annotationProcessor
+tasks.withType(JavaCompile) {
+	options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
 }
 
-configurations {
-	querydsl.extendsFrom compileClasspath
+clean.doLast {
+	file(querydslDir).deleteDir()
 }
-
