--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -39,10 +39,9 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build with Gradle  # Gradle을 사용하여 프로젝트 빌드
-        run: ./gradlew clean build
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: build
+          arguments: clean build
 
       - name: Gradle with warnings
         run: ./gradlew build --warning-mode all
