--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@
 #properties와의 차이점 : spring.datasource.url=jdbc:mysql://localhost:3306/umc7th 이런식이지 둘이 똑같음.
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/study
+    url: jdbc:mysql://localhost:3306/study?serverTimezone=Asia/Seoul
     username: root
     password: tire1347
     driver-class-name: com.mysql.cj.jdbc.Driver
